easy to forget left_sharp config. ensure that left_sharp >= left (same for right)